Refactor: Update api categories + api user_Addresses + brands = products (soft Delete, hard Delelte)
